--- a/site/web/app/themes/module/assets/sass/pages/home.scss
+++ b/site/web/app/themes/module/assets/sass/pages/home.scss
@@ -231,18 +231,13 @@
       .mobile_title {
         display: none;
       }
-			.hero-image{
-				width: 100%;
-				height: 100%;
-
-				.img {
-					flex: 0 0 273px;
-					height: 100%;
-					background-size: cover;
-					background-repeat: no-repeat;
-					background-position: 50%;
-				}
-			}
+      .img {
+        flex: 0 0 273px;
+        height: 100%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: 50%;
+      }
       .content {
         padding: .5em 4%;
         .title {
